@@ -1,7 +1,10 @@
 package com.google.adk.a2a.converters;
 
+import static java.util.stream.Collectors.toCollection;
+
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import com.google.genai.types.Blob;
 import com.google.genai.types.FileData;
 import com.google.genai.types.FunctionCall;
@@ -13,8 +16,10 @@ import io.a2a.spec.FilePart;
 import io.a2a.spec.FileWithBytes;
 import io.a2a.spec.FileWithUri;
 import io.a2a.spec.TextPart;
+import java.util.ArrayList;
 import java.util.Base64;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import org.slf4j.Logger;
@@ -58,6 +63,13 @@ public final class PartConverter {
 
     logger.warn("Unsupported A2A part type: {}", a2aPart.getClass());
     return Optional.empty();
+  }
+
+  public static List<com.google.genai.types.Part> toGenaiParts(List<io.a2a.spec.Part<?>> a2aParts) {
+    return a2aParts.stream()
+        .map(PartConverter::toGenaiPart)
+        .flatMap(Optional::stream)
+        .collect(toCollection(ArrayList::new));
   }
 
   /**
@@ -129,8 +141,8 @@ public final class PartConverter {
 
     String metadataType = metadata.getOrDefault(A2A_DATA_PART_METADATA_TYPE_KEY, "").toString();
 
-    if (data.containsKey("name") && data.containsKey("args")
-        || A2A_DATA_PART_METADATA_TYPE_FUNCTION_CALL.equals(metadataType)) {
+    if ((data.containsKey("name") && data.containsKey("args"))
+        || metadataType.equals(A2A_DATA_PART_METADATA_TYPE_FUNCTION_CALL)) {
       String functionName = String.valueOf(data.getOrDefault("name", ""));
       String functionId = String.valueOf(data.getOrDefault("id", ""));
       Map<String, Object> args = coerceToMap(data.get("args"));
@@ -141,8 +153,8 @@ public final class PartConverter {
               .build());
     }
 
-    if (data.containsKey("name") && data.containsKey("response")
-        || A2A_DATA_PART_METADATA_TYPE_FUNCTION_RESPONSE.equals(metadataType)) {
+    if ((data.containsKey("name") && data.containsKey("response"))
+        || metadataType.equals(A2A_DATA_PART_METADATA_TYPE_FUNCTION_RESPONSE)) {
       String functionName = String.valueOf(data.getOrDefault("name", ""));
       String functionId = String.valueOf(data.getOrDefault("id", ""));
       Map<String, Object> response = coerceToMap(data.get("response"));
@@ -175,10 +187,10 @@ public final class PartConverter {
     Map<String, Object> data = new HashMap<>();
     data.put("name", functionCall.name().orElse(""));
     data.put("id", functionCall.id().orElse(""));
-    data.put("args", functionCall.args().orElse(Map.of()));
+    data.put("args", functionCall.args().orElse(ImmutableMap.of()));
 
-    Map<String, Object> metadata =
-        Map.of(A2A_DATA_PART_METADATA_TYPE_KEY, A2A_DATA_PART_METADATA_TYPE_FUNCTION_CALL);
+    ImmutableMap<String, Object> metadata =
+        ImmutableMap.of(A2A_DATA_PART_METADATA_TYPE_KEY, A2A_DATA_PART_METADATA_TYPE_FUNCTION_CALL);
 
     return Optional.of(new DataPart(data, metadata));
   }
@@ -194,10 +206,11 @@ public final class PartConverter {
     Map<String, Object> data = new HashMap<>();
     data.put("name", functionResponse.name().orElse(""));
     data.put("id", functionResponse.id().orElse(""));
-    data.put("response", functionResponse.response().orElse(Map.of()));
+    data.put("response", functionResponse.response().orElse(ImmutableMap.of()));
 
-    Map<String, Object> metadata =
-        Map.of(A2A_DATA_PART_METADATA_TYPE_KEY, A2A_DATA_PART_METADATA_TYPE_FUNCTION_RESPONSE);
+    ImmutableMap<String, Object> metadata =
+        ImmutableMap.of(
+            A2A_DATA_PART_METADATA_TYPE_KEY, A2A_DATA_PART_METADATA_TYPE_FUNCTION_RESPONSE);
 
     return Optional.of(new DataPart(data, metadata));
   }
